[workspace]
members = [
  "connections",
  "protocols",
  "searcher",
  "worker",
  "add_worker",
  "rem_worker",
  "sync",
  "check_worker",
  "ws_subscription_worker",
  "ws_account_worker"
]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
