[workspace]
members = [
	"connections",
	"protocols",
	"searcher",
	"worker",
	"add_worker",
	"rem_worker",
	"sync",
	"check_worker",
	"ws_subscription_worker",
	"ws_account_worker",
]
resolver = "2"

[workspace.dependencies]
# Solana
solana-sdk = "=2.3.1"
solana-client = "=2.3.13"
solana-pubkey = "=2.4.0"
solana-system-interface = "=1.0.0"
solana-instruction = "=2.3.3"
solana-sdk-ids = "=2.2.1"
solana-account-decoder = "=2.3.13"
solana-compute-budget-interface = "=2.2.2"
solana-account = "=2.2.1"
solana-commitment-config = "=2.2.1"

# Anchor
anchor-client = { version = "=0.32.1", features = ["async"] }
anchor-lang = "=0.32.1"
anchor-spl = { version = "=0.32.1", features = ["token", "token_2022", "associated_token"] }

# SPL
spl-associated-token-account = "=7.0.0"

# Oracle SDKs
pyth-solana-receiver-sdk = "=1.1.0"
switchboard-on-demand = "=0.11.3"

# Common
anyhow = "=1.0.100"
tokio = { version = "=1.49.0", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
fixed = { version = "=1.28.0", features = ["serde"] }
dotenvy = "=0.15.7"
hostname = "=0.4.2"
base64 = "=0.22.1"
futures-util = "=0.3.32"
bincode = "=1.3.3"
redis = { version = "=1.0.2", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "=1.20.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"