[package]
name = "add_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
fixed = "=1.28.0"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
solana-pubkey = "^2"
protocols = { path = "../protocols" }
connections = { path = "../connections" }
hostname = "0.4.2"