[package]
name = "check_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
fixed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hostname.workspace = true
solana-pubkey.workspace = true
protocols = { path = "../protocols" }
connections = { path = "../connections" }