[package]
name = "connections"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.0.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
solana-pubkey = { version = "^2", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
hex = "0.4.3"
