[package]
name = "protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
fixed.workspace = true
base64.workspace = true
futures-util.workspace = true
bincode.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-pubkey.workspace = true
solana-system-interface.workspace = true
solana-instruction.workspace = true
solana-sdk-ids.workspace = true
solana-account-decoder.workspace = true
solana-account.workspace = true
pyth-solana-receiver-sdk.workspace = true
switchboard-on-demand.workspace = true
tokio-stream = "0.1.17"
bytemuck = "1.22.0"
static_assertions = "1.1.0"
fixed-macro = "1.2.0"
enum_dispatch = "0.3.13"
serde-big-array = "0.5"

[dev-dependencies]
pretty_assertions = "1.2.1"