[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
fixed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hostname.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-pubkey.workspace = true
solana-account.workspace = true
solana-instruction.workspace = true
solana-compute-budget-interface.workspace = true
spl-associated-token-account.workspace = true
anchor-spl.workspace = true
jupiter-swap-api-client = { git = "https://github.com/touchmeangel/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
protocols = { path = "../protocols" }
connections = { path = "../connections" }