[package]
name = "ws_subscription_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
fixed = "=1.28.0"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
protocols = { path = "../protocols" }
connections = { path = "../connections" }
solana-pubkey = "^2"
solana-rpc-client = "^2"
solana-pubsub-client = "^2"
solana-account-decoder = "^2"
solana-commitment-config = "^2"
solana-rpc-client-types = "^2"
hostname = "0.4.2"
futures-util = "0.3.32"
base64 = "0.22.1"
uuid = { version = "1", features = ["v4"] }