[package]
name = "ws_subscription_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
fixed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hostname.workspace = true
base64.workspace = true
futures-util.workspace = true
redis.workspace = true
uuid.workspace = true
solana-pubkey.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-commitment-config.workspace = true
protocols = { path = "../protocols" }
connections = { path = "../connections" }